--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Amaro</string>
+    <string name="onResponse_erro">Ocorreu um erro inesperado</string>
+    <string name="onFailure">Verifique sua conexão com a internet e tente novamente</string>
 </resources>
