--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Amaro</string>
     <string name="onResponse_erro">Ocorreu um erro inesperado</string>
     <string name="onFailure">Verifique sua conexão com a internet e tente novamente</string>
+    <string name="nome_produto">Nome Produto</string>
+    <string name="valor_produto">Valor Produto</string>
 </resources>
