--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="valor_produto">Valor Produto</string>
     <string name="valor_regular"><strike>Valor Regular</strike></string>
     <string name="parcelar">"Até "</string>
+    <string name="comprar">Comprar</string>
 </resources>
